# adelantado

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  HTTPClient.cpp  HTTPClient.h  Makefile  README.md  adelantado.cfg.dist  app.cpp  app.h  cfgloader.h  deploy.sh  docker-compose.yml  domain-priority.txt  helper.h  html-filter.cpp  html-filter.h  install-gtest.sh  install-gumbo.sh  install-prometheus-cpp.sh  keyword-ignore.txt  keywords.txt  links.txt  main.cpp  repo.cpp  repo.h  runtime.h  setup.linux.sh  setup.sh  url.cpp  url.h
.deploy/adelantado/: adelantado.cfg
.deploy/grafana/: Adelantado.json
.deploy/prometheus/: prometheus.yml
migrations/: 1-schema.sql  2-data.sql  3-data.sql
src/: HTTPClient.cpp  HTTPClient.h  Metrics.cpp  Metrics.h  app.h  cfgloader.h  char-conv.h  domain.h  helper.h  html-filter.cpp  html-filter.h
src/html/: AbstractPageScanner.h  GumboPageScanner.cpp  GumboPageScanner.h
src/parser/: AbstractPageScanner.h  GumboPageScanner.cpp  GumboPageScanner.h  KeywordEntries.cpp  KeywordEntries.h
src/scrape/: MultiThreadPageScrapper.cpp  MultiThreadPageScrapper.h  ObserverResult.cpp  ObserverResult.h  VectorBulkSplitter.h  utils.h
src/storage/: LinkBatchStorage.cpp  LinkBatchStorage.h  LinkStorage.cpp  LinkStorage.h  common.h
tests/: CMakeLists.txt  app.test.cpp  char-conv.test.cpp  main.cpp  url.test.cpp
tests/src/html/: GumboPageScanner.test.cpp
tests/src/parser/: GumboPageScanner.test.cpp  KeywordEntries.test.cpp
tests/src/scrape/: VectorBulkSplitter.test.cpp  utils.test.cpp
